added unordered list

--- a/index.html
+++ b/index.html
@@ -77,7 +77,32 @@
                 <img src="/images/exit.png" alt="exit" width="20" height="20"> 
             </button>
         </div>
-        
+
+        <div class="unordered-list">
+            <h4>Unordered List</h4>
+            <ul>
+                <li>Element1</li>
+                <li>Element2</li>
+                <li>Element3</li>
+                <li>Element4</li>
+
+            </ul>
+            <ul class="empty-marker">
+                <li>Element1</li>
+                <li>Element2</li>
+                <li>Element3</li>
+                <li>Element4</li>
+            </ul>
+            <ul class="square-marker">
+                <li>Element1</li>
+                <li>Element2</li>
+                <li>Element3</li>
+                <li>Element4</li>
+            </ul>
+    </div>
+
+    
+</div>
     </main>
 
     <footer>
