--- a/index.html
+++ b/index.html
@@ -77,32 +77,52 @@
                 <img src="/images/exit.png" alt="exit" width="20" height="20"> 
             </button>
         </div>
+        <div>
+            <div class="unordered-list">
+                <h4>Unordered List</h4>
+                <ul>
+                    <li>Element1</li>
+                    <li>Element2</li>
+                    <li>Element3</li>
+                    <li>Element4</li>
 
-        <div class="unordered-list">
-            <h4>Unordered List</h4>
-            <ul>
-                <li>Element1</li>
-                <li>Element2</li>
-                <li>Element3</li>
-                <li>Element4</li>
+                </ul>
+                <ul class="empty-marker">
+                    <li>Element1</li>
+                    <li>Element2</li>
+                    <li>Element3</li>
+                    <li>Element4</li>
+                </ul>
+                <ul class="square-marker">
+                    <li>Element1</li>
+                    <li>Element2</li>
+                    <li>Element3</li>
+                    <li>Element4</li>
+                </ul>
+            </div>
+            <div class="ordered-list">
+                <h4>Ordered List</h4>
+                <ol type="a", >
+                    <li>Element1</li>
+                    <li>Element2</li>
+                    <li>Element3</li>
+                    <li>Element4</li>
 
-            </ul>
-            <ul class="empty-marker">
-                <li>Element1</li>
-                <li>Element2</li>
-                <li>Element3</li>
-                <li>Element4</li>
-            </ul>
-            <ul class="square-marker">
-                <li>Element1</li>
-                <li>Element2</li>
-                <li>Element3</li>
-                <li>Element4</li>
-            </ul>
-    </div>
-
-    
-</div>
+                </ol>
+                <ol reversed, start="100">
+                    <li>Element1</li>
+                    <li>Element2</li>
+                    <li>Element3</li>
+                    <li>Element4</li>
+                </ol>
+                <ol type="I", start="999">
+                    <li>Element1</li>
+                    <li>Element2</li>
+                    <li>Element3</li>
+                    <li>Element4</li>
+                </ol>
+            </div>
+        </div>
     </main>
 
     <footer>
