edited photo path

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         </p>
         <div class="">
         <button>
-            <img src="/images/thumb-up.png" alt="thumb-up" width="20" height="20"> 
+            <img src="./images/thumb-up.png" alt="thumb-up" width="20" height="20"> 
         </button>
         <button>
-            <img src="/images/thumb-down.png" alt="thumb-down" width="20" height="20"> 
+            <img src="./images/thumb-down.png" alt="thumb-down" width="20" height="20"> 
         </button>
         </div>
         <div class="exit">
             <button>
-                <img src="/images/exit.png" alt="exit" width="20" height="20"> 
+                <img src="./images/exit.png" alt="exit" width="20" height="20"> 
             </button>
         </div>
         <div>
